adapt publish release flow with scripts